popup title alignment fix

--- a/blocks/popup/__container/__container.css
+++ b/blocks/popup/__container/__container.css
@@ -5,7 +5,6 @@
   width: 430px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 @media screen and (max-width: 767px) {
