--- a/blocks/popup/__title/__title.css
+++ b/blocks/popup/__title/__title.css
@@ -4,11 +4,11 @@
   font-size: 24px;
   line-height: 29px;
   width: 330px;
-  margin: 34px 0 54px 36px;
+  margin: 34px 0 54px 0;
 }
 
 @media screen and (max-width: 767px) {
   .popup__title {
-    margin: 34px 0 54px 0;
+    margin: 12px 0 54px 0;
   }
 }
